Confirm button (demo input/output)

--- a/src/app/features/home/pages/home-page/home-page.html
+++ b/src/app/features/home/pages/home-page/home-page.html
@@ -1,1 +1,7 @@
 <p>home-page works!</p>
+
+<app-confirm-button
+  label="❌"
+  confirmText="Tu vas supprimer un truc!"
+  (confirmation)="onConfirmation()"
+/>
